# serializer version: 1
# name: test_snapshot
  dict({
    'control': dict({
    }),
    'entity_info': dict({
      'household_id': 7777,
      'id': 123455,
      'name': 'Maui',
      'photo': dict({
        'created_at': datetime.datetime(2023, 10, 3, 15, 18, 9, tzinfo=TzInfo(UTC)),
        'hash': 'UCcarrDHzX0MkjEORQqCXNLKxsdweCQPJjl3OQ7s',
        'id': 623733,
        'location': 'https://userimages.production.surehub.io/thm/3139194472/UCcarrDHzX0MkjEORQqCXNLKxsdweCQPJjl3OQ7s.jpg',
        'title': '1696346281223-cropped.jpg?1696346286094',
        'updated_at': datetime.datetime(2023, 10, 3, 15, 18, 9, tzinfo=TzInfo(UTC)),
        'uploading_user_id': 3139194472,
        'version': 0,
      }),
      'product_id': 0,
      'tag': dict({
        'created_at': datetime.datetime(2019, 9, 4, 20, 28, 11, tzinfo=TzInfo(UTC)),
        'id': 60978,
        'supported_product_ids': list([
          3,
          4,
          6,
          8,
          10,
          32,
        ]),
        'tag': '752.093200030403',
        'updated_at': datetime.datetime(2020, 3, 11, 14, 21, 7, tzinfo=TzInfo(UTC)),
        'version': 1,
      }),
      'tag_id': 60978,
    }),
    'last_fetched_datetime': '<ANY>',
    'status': dict({
      'activity': dict({
      }),
      'devices': list([
        dict({
          'created_at': datetime.datetime(2025, 9, 17, 17, 12, 47, tzinfo=TzInfo(UTC)),
          'id': 269654,
          'index': 2,
          'profile': 2,
          'updated_at': datetime.datetime(2025, 9, 17, 17, 12, 47, tzinfo=TzInfo(UTC)),
          'version': 1,
        }),
        dict({
          'created_at': datetime.datetime(2025, 7, 13, 11, 14, 42, tzinfo=TzInfo(UTC)),
          'id': 271836,
          'index': 2,
          'profile': 2,
          'updated_at': datetime.datetime(2025, 7, 13, 11, 14, 42, tzinfo=TzInfo(UTC)),
          'version': 1,
        }),
        dict({
          'created_at': datetime.datetime(2025, 4, 25, 19, 0, 40, tzinfo=TzInfo(UTC)),
          'id': 1181149,
          'index': 1,
          'profile': 2,
          'updated_at': datetime.datetime(2025, 4, 25, 19, 0, 40, tzinfo=TzInfo(UTC)),
          'version': 1,
        }),
      ]),
      'drinking': dict({
      }),
      'feeding': dict({
        'at': datetime.datetime(2025, 9, 16, 19, 42, 53, tzinfo=TzInfo(UTC)),
        'change': list([
          -3.23,
          0,
        ]),
        'device_id': 269654,
        'id': 1210761432,
        'tag_id': 2039802,
      }),
    }),
    'timezone': 'Europe/Stockholm',
  })
# ---
# name: test_snapshot.1
  dict({
    'control': dict({
    }),
    'entity_info': dict({
      'household_id': 7777,
      'id': 629768,
      'name': 'Fionna',
      'photo': dict({
        'created_at': datetime.datetime(2025, 2, 28, 15, 34, 12, tzinfo=TzInfo(UTC)),
        'hash': 'R01qBHfrNHNkeMiNQrtfgoWlOtUGj8TqTCzgyUZPsI',
        'id': 820465,
        'location': 'https://userimages.production.surehub.io/thm/XXXXXXXXX/R01qBHfrNHNkeMiNQrtfgoWlOtUGj8TqTCzgyUZPsI.jpg',
        'uploading_user_id': 9999999,
        'version': 0,
      }),
      'product_id': 0,
      'tag': dict({
        'created_at': datetime.datetime(2025, 2, 28, 13, 34, 39, tzinfo=TzInfo(UTC)),
        'id': 1725049,
        'supported_product_ids': list([
          3,
          4,
          6,
          8,
          10,
          32,
        ]),
        'tag': '756.098101172569',
        'version': 0,
      }),
      'tag_id': 1725049,
    }),
    'last_fetched_datetime': '<ANY>',
    'status': dict({
      'activity': dict({
        'id': 5045077041,
        'pet_id': 629768,
        'since': datetime.datetime(2025, 9, 11, 10, 36, 59, tzinfo=TzInfo(UTC)),
        'tag_id': 1725049,
        'user_id': 9999999,
        'where': <PetLocation.OUTSIDE: 1>,
      }),
      'devices': list([
        dict({
          'created_at': datetime.datetime(2025, 9, 17, 17, 12, 47, tzinfo=TzInfo(UTC)),
          'id': 269654,
          'index': 2,
          'profile': 2,
          'updated_at': datetime.datetime(2025, 9, 17, 17, 12, 47, tzinfo=TzInfo(UTC)),
          'version': 1,
        }),
      ]),
      'drinking': dict({
      }),
      'feeding': dict({
        'at': datetime.datetime(2025, 9, 16, 19, 42, 53, tzinfo=TzInfo(UTC)),
        'change': list([
          -3.23,
          0,
        ]),
        'device_id': 269654,
        'id': 1210761432,
        'tag_id': 2039802,
      }),
    }),
    'timezone': 'Europe/Stockholm',
  })
# ---
